<resources>
    <string name="app_name">Tasky</string>
    <string name="search">Search</string>
    <string name="today_s_task">Today\'s Task</string>
    <string name="hi_user">Hi User!</string>
    <string name="add_task">+</string>
    <string name="user">user</string>
    <string name="set_alarm">set alarm</string>
    <string name="welcome">Welcome!</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="new_user_sign_up">New User? Sign Up</string>
    <string name="login">Login</string>
    <string name="todo">TODO</string>
    <string name="create_new_account">Create new account</string>
    <string name="logins">Already have an account? Login</string>
    <string name="signup">Signup</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="task_title">Task Title</string>
    <string name="start_typing">Start typing...</string>
    <string name="done">Done</string>
    <string name="set_reminder">Set reminder</string>
    <string name="today_s_date">Today\'s Date</string>
    <string name="logout">LogOut</string>
    <string name="empty_list">Empty List</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_date">Enter Date</string>
    <string name="enter_description">Enter Description</string>
    <string name="add_note">Add Note</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="id">\"0\"</string>
</resources>