<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FEFEFE"
    android:backgroundTint="#FEFEFE">


    <TextView
        android:id="@+id/tasktitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:hint="@string/task_title"
        android:textAlignment="center"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        android:textStyle="italic"
        android:layout_toRightOf="@+id/_id"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toTopOf="@+id/date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.516" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/_id"
        android:layout_below="@+id/tasktitle"
        android:padding="6dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:hint="@string/today_s_date"
        android:textColorHint="#546E7A"
        android:textSize="14sp"
        android:visibility="visible"
        />

    <TextView
        android:id="@+id/description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/_id"
        android:layout_below="@+id/date"
        android:padding="6dp"
        android:maxLines="2"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:textSize="16sp"
        android:visibility="visible"
         />

    <TextView
        android:id="@+id/_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:padding="6dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:hint="@string/id"
        android:textColorHint="#757575"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tasktitle"
        app:layout_constraintHorizontal_bias="0.723"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.011" />

</RelativeLayout>